--- a/client/src/app/modules/monitoring/components/monitoring/monitoring.component.html
+++ b/client/src/app/modules/monitoring/components/monitoring/monitoring.component.html
@@ -9,7 +9,9 @@
       <monitoring-details [selectedBatchSetting]="batchSettingsSelected"></monitoring-details>
     </mat-tab>
     <mat-tab label="Noeuds" *ngIf="canDisplayExtendentMonitoring()">
-      <monitoring-nodes></monitoring-nodes>
+      <ng-template matTabContent>
+        <monitoring-nodes></monitoring-nodes>
+      </ng-template>
     </mat-tab>
   </mat-tab-group>
 </div>
