--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -269,14 +269,20 @@
       </provision-payment>
     </mat-tab>
     <mat-tab label="Historique" *ngIf="announcement && announcement.id">
-      <history [entity]="announcement" [entityType]="ANNOUNCEMENT_ENTITY_TYPE" [parseTypeList]="announcementStatus">
-      </history>
+      <ng-template matTabContent>
+        <history [entity]="announcement" [entityType]="ANNOUNCEMENT_ENTITY_TYPE" [parseTypeList]="announcementStatus">
+        </history>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Historique (prestation)" *ngIf="provision && provision.id">
-      <history [entity]="provision" [entityType]="PROVISION_ENTITY_TYPE"></history>
+      <ng-template matTabContent>
+        <history [entity]="provision" [entityType]="PROVISION_ENTITY_TYPE"></history>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Débours" *ngIf=" announcement && announcement.id && canAddNewInvoice()">
-      <debour [provision]="provision"></debour>
+      <ng-template matTabContent>
+        <debour [provision]="provision"></debour>
+      </ng-template>
     </mat-tab>
   </mat-tab-group>
 </form>
