--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -35,7 +35,7 @@
         </table>
       </div>
     </mat-tab>
-    <mat-tab label="Options"
+    <mat-tab label="Dépôt d'actes"
       *ngIf="provision && provision.provisionType && provision.provisionType.isDisplayActeDepositScreen">
       <acte-deposit [editMode]="editMode" [provision]="provision" [affaire]="affaire"></acte-deposit>
     </mat-tab>
@@ -53,16 +53,24 @@
       </provision-payment>
     </mat-tab>
     <mat-tab label="Historique GU" *ngIf="formalite && formalite.id && formalite.formalitesGuichetUnique ">
-      <guichet-unique-status [formalitesGuichetUnique]="formalite.formalitesGuichetUnique"></guichet-unique-status>
+      <ng-template matTabContent>
+        <guichet-unique-status [formalitesGuichetUnique]="formalite.formalitesGuichetUnique"></guichet-unique-status>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Historique" *ngIf="formalite && formalite.id">
-      <history [entity]="formalite" [entityType]="FORMALITE_ENTITY_TYPE" [parseTypeList]="formaliteStatus"></history>
+      <ng-template matTabContent>
+        <history [entity]="formalite" [entityType]="FORMALITE_ENTITY_TYPE" [parseTypeList]="formaliteStatus"></history>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Historique (prestation)" *ngIf="provision && provision.id">
-      <history [entity]="provision" [entityType]="PROVISION_ENTITY_TYPE"></history>
+      <ng-template matTabContent>
+        <history [entity]="provision" [entityType]="PROVISION_ENTITY_TYPE"></history>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Débours" *ngIf="formalite && formalite.id && canAddNewInvoice()">
-      <debour [provision]="provision"></debour>
+      <ng-template matTabContent>
+        <debour [provision]="provision"></debour>
+      </ng-template>
     </mat-tab>
   </mat-tab-group>
 </form>
