--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -9,48 +9,68 @@
       <settlement-billing [tiers]="tiers" [editMode]="editMode"></settlement-billing>
     </mat-tab>
     <mat-tab label="Responsable(s)">
-      <responsable-main [tiers]="tiers" [editMode]="editMode"></responsable-main>
+      <ng-template matTabContent>
+        <responsable-main [tiers]="tiers" [editMode]="editMode"></responsable-main>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Documents" *ngIf="tiers.id!=null && tiers.id!=undefined">
       <attachments [entity]="tiers" [editMode]="editMode" [entityType]="TIERS_ENTITY_TYPE.entityType">
       </attachments>
     </mat-tab>
     <mat-tab label="Mails" *ngIf="tiers.id">
-      <automatic-mail-list [tiers]="tiers">
-      </automatic-mail-list>
+      <ng-template matTabContent>
+        <automatic-mail-list [tiers]="tiers">
+        </automatic-mail-list>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Devis" *ngIf="tiers.id!=null && tiers.id!=undefined">
-      <quotation-list class="integration-component" *ngIf="this.quotationSearch.customerOrders"
-        [quotationSearch]="quotationSearch" [isForTiersIntegration]="true">
-      </quotation-list>
+      <ng-template matTabContent>
+        <quotation-list class="integration-component" *ngIf="this.quotationSearch.customerOrders"
+          [quotationSearch]="quotationSearch" [isForTiersIntegration]="true">
+        </quotation-list>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Commandes" *ngIf="tiers.id!=null && tiers.id!=undefined">
-      <ordering-list class="integration-component" *ngIf="this.orderingSearch.customerOrders"
-        [orderingSearch]="orderingSearch" [isForTiersIntegration]="true">
-      </ordering-list>
+      <ng-template matTabContent>
+        <ordering-list class="integration-component" *ngIf="this.orderingSearch.customerOrders"
+          [orderingSearch]="orderingSearch" [isForTiersIntegration]="true">
+        </ordering-list>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Prestations" *ngIf="tiers.id!=null && tiers.id!=undefined">
-      <provision-list class="integration-component"
-        *ngIf="this.provisionSearch.customerOrders && this.provisionSearch.customerOrders.length>0"
-        [affaireSearch]="provisionSearch" [isForTiersIntegration]="true">
-      </provision-list>
+      <ng-template matTabContent>
+        <provision-list class="integration-component"
+          *ngIf="this.provisionSearch.customerOrders && this.provisionSearch.customerOrders.length>0"
+          [affaireSearch]="provisionSearch" [isForTiersIntegration]="true">
+        </provision-list>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Factures" *ngIf="invoiceSearch.customerOrders">
-      <invoice-list [invoiceSearch]="invoiceSearch" [isForTiersIntegration]="true"></invoice-list>
+      <ng-template matTabContent>
+        <invoice-list [invoiceSearch]="invoiceSearch" [isForTiersIntegration]="true"></invoice-list>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Comptes" *ngIf="responsableAccountSearch && responsableAccountSearch.id && !this.idResponsable">
-      <accounting-record [tiersToDisplay]="responsableAccountSearch"></accounting-record>
+      <ng-template matTabContent>
+        <accounting-record [tiersToDisplay]="responsableAccountSearch"></accounting-record>
+      </ng-template>
     </mat-tab>
     <mat-tab label="RFF" *ngIf="rffSearch && rffSearch.tiers  ">
-      <div class="mat-elevation-z2 form-div">
-        <rff-list [rffSearch]="rffSearch" [isForTiersIntegration]="true"></rff-list>
-      </div>
+      <ng-template matTabContent>
+        <div class="mat-elevation-z2 form-div">
+          <rff-list [rffSearch]="rffSearch" [isForTiersIntegration]="true"></rff-list>
+        </div>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Suivi" *ngIf="tiers.id!=null && tiers.id!=undefined">
-      <tiers-followup [tiers]="tiers" [editMode]="editMode"></tiers-followup>
+      <ng-template matTabContent>
+        <tiers-followup [tiers]="tiers" [editMode]="editMode"></tiers-followup>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Historique" *ngIf="tiers.id!=null && tiers.id!=undefined">
-      <history [entity]="tiers" [entityType]="TIERS_ENTITY_TYPE"></history>
+      <ng-template matTabContent>
+        <history [entity]="tiers" [entityType]="TIERS_ENTITY_TYPE"></history>
+      </ng-template>
     </mat-tab>
   </mat-tab-group>
 </div>
